# TravailCyTech

./: .gitignore  .gitmodules
S1/Algorithmique/TD2/: exo1.alg  exo1.c  exo4  exo4.alg
S1/Algorithmique/TD3/: Exo1Files.alg  Exo1Piles.alg
S1/Algorithmique/TD4/: exo1.alg  exo2.alg  exo3.alg  exo4.alg
S1/Algorithmique/TD5/: exo1.alg  exo2.alg
S1/Algorithmique/TD6/: exo1.alg  exo2.alg  triBulle  triBulle.c
S1/Algorithmique/TD7/: exo1.alg  exo2.alg  exo3.alg
S1/Algorithmique/TD8/: Exercice1.alg  Exercice2.alg
S1/Algorithmique/TD9/: Exercice1.alg  Exercice2.alg
S1/Bases De Donnes/: Bases De Donnes.code-workspace
S1/Bases De Donnes/TD3/: pokemon.sql
S1/Bases De Donnes/TD4/: pokemon2.sql
S1/Bases De Donnes/TD5/: pokemon3.sql
S1/Bases De Donnes/TD6/: pokemon4.sql
S1/Commande Unix/TP2/: HarryPotter.txt  data.csv  hoy
S1/Commande Unix/TP3/: hp1bis.txt  hp1ter.txt  joueurs.txt
S1/Commande Unix/TP4/: hp1.txt  hp1Modif1.txt  hp1Modif3.txt  hp1Modif4.txt  hp1Modif5.txt  tp4.tar.xz
S1/Commande Unix/TP5/: maTache.sh  script1.sh  script2.sh  script3.sh
S1/Commande Unix/TP6/: question1.sh  question2.sh  question3.sh  question4-5.sh  question6.sh  tux.sh
S1/Commande Unix/exam/: Exercice1.sh  Exercice2.sh  Exercice3.sh  notes.txt
S1/Data Exploration/: acm.alg
S1/Data Exploration/ACP/: DecathlonData.xls  EconomieEuropData.xls  EspVieACPData.txt  Notes.txt  PoissonsData.xls  TD1.RData  TD2.RData  code.R  codeTD2.R
S1/Data Exploration/Data-Exploration-GI/: EnsSuperieur_Correction.xls  JeuxVideo.csv  Salaires_Correction.xls  TP6-StatBivarieeQualQual.bis.7z  TUTO-Rcmdr-Linux.txt  Test_Clusters_Distincts.txt  Test_Clusters_Melanges.txt  Test_Clusters_Random.txt  Titanic.csv  fromage.txt
S1/Data Exploration/Quali-Quali/: codeEx3.R
S1/Data Exploration/Quanti-Quali/: EnsSuperieur.txt  Exercice2.R  Salaires.txt
S1/Data Exploration/TP2/: .Rhistory
S1/Data Exploration/clustering/: CAH.R  Test_Clusters_Atypiques.txt  Test_Clusters_Distincts.txt  clusterin.R
S1/Programation Proc/: createAssign.bash
S1/Programation Proc/TP4/: a.out  pi.h  racine2.c  racine2.h
S1/Programation Proc/TP5/: Makefile  a.out
S1/Programation Proc/TP6/: Doxyfile  README.md
S1/Programation Proc/TP6-TP7/: Makefile  README.md
S1/ProgramationProc/: Programation Proc.code-workspace
S1/ProgramationProc/TP1/: hello  hello.c
S1/ProgramationProc/TP10/: Doxyfile  Makefile  README.md
S1/ProgramationProc/TP4/: README.md  a.out  racine2.h
S1/ProgramationProc/TP6-TP7/: Doxyfile
S1/ProgramationProc/TP8/: Doxyfile
S1/SystemesExploitation/TP2/: ex1.odg  ex2.odg  ex3.odg  ex4.odg
S1/SystemesExploitation/TP3/: main  main.c
S2/AdO/TP4/: Makefile
S2/Algo/TP/: original.dot  pom.xml  resultat.dot
S2/Design/: Proto.blend  Proto.blend1
S2/DevWeb/: README.MD
S2/DevWeb/Ing1GI1-LEYDERT-MICHELDANSAC/: .htaccess  accueil.html  accueil.php  index.php  login.php  science.html
S2/DevWeb/TPs/: .htaccess  ProduitsScience.sql  README.MD  accueil.html  accueil.xhtml  config.json  contact.html  contact.php  index.html  index.php  login.php  logout.php  science.html  science.php  signin.php  style.css
S2/DevWeb/cours/: Cours 1 _ HTML - CSS.html
S2/Java/tpEclipse/: build.xml
S2/OptiLin/: pom.xml
S2/OptiLin/.metals/: metals.lock.db  metals.mv.db
S2/Prolog/: test.pl
S2/Prolog/TP1/: test.pl
S3/IA/: Test_Classif_Correl.txt  Test_Classif_dpt.txt  yee.R
S3/Stat/: Ech1.txt  Ech2.txt  Ech3.txt  Ech4.txt  Ech5.txt  EspVieACPData.txt  Industries.csv
S4/ProgC++/ConstructeurDestructeur/: CMakeLists.txt  disk.cpp  disk.h  fraction.cpp  fraction.h  game.cpp  game.h  garland.cpp  garland.h  light.h  main.cpp  pair.cpp  tower.cpp  tower.h  vector.h
S4/ProgC++/HeritagePolymorphisme/: CMakeLists.txt  main.cpp  personne.cpp  personne.h  polygon.cpp  student.cpp
S4/ProgC++/HeritagePolymorphisme/CM/: person.cpp  person.h  rectangle.cpp  student.h  triangle.cpp  triangle.h
S4/ProgC++/HeritagePolymorphisme/filesystem/: element.h  file.h  image.cpp  image.h  text.cpp
S4/ProgC++/HeritagePolymorphisme/garlands/: electric.cpp  garland.cpp  light.h
S4/ProgFonc/: stack.yaml
S4/ProgPara/: CmakeLists.txt
S4/ProgPara/S01-OpenMP_1/: CMakeLists.txt  main.c
S4/ProgPara/S01-OpenMP_1/codes_OpenMP-1/: 06-rp.c  07-rp.c  08-rp.c  09-rp.c  10-rp.c  11-rp.c  example01.c  example02.sh  example03.c  example04.c  example05_2.c
S4/ProgPara/S01-OpenMP_1/skeletons/: 02-exercise.c  03-mvp_seq.c
S4/ProgPara/S03-OpenMP_3/: 01-ordered.c  02-taskingExample.c  03-taskingExample.c  04-taskingExample.c  05-taskingExample.c  06-taskingExample.c  07-fibonacci.c  07-fibonacci_debug.c  07-fibonacci_seq.c  CMakeLists.txt  a.out  main.c
S4/ProgPara/S03-OpenMP_3/skeletons/: 01-graphdegree_skel.c
S4/ProgSysRes/: 2  3  RenduTP1-2.tar  a.out  leydert_luc-tp3.tgz  nouveau  recouv
S5/MoteursPhysiques/: CMakeLists.txt
S5/MoteursPhysiques/Application/: Application.cpp  GxParticle.cpp  GxParticle.h  GxUpdater.cpp  GxUpdater.h  GxWorld.cpp  GxWorld.h
S5/MoteursPhysiques/Quantum/: QmBody.cpp  QmBody.h  QmDrag.cpp  QmDrag.h  QmFixedMagnetism.cpp  QmFixedMagnetism.h  QmFixedSpring.cpp  QmFixedSpring.h  QmForceGenerator.h  QmForceRegistry.cpp  QmForceRegistry.h  QmGravity.cpp  QmGravity.h  QmMagnetism.cpp  QmMagnetism.h  QmParticle.cpp  QmParticle.h  QmSpring.cpp  QmSpring.h  QmUpdater.h  QmWorld.cpp  QmWorld.h  Quantum.h  ReadMe.txt
S5/OpenGL/: CMakeLists.txt  day1exo1.cpp  day1exo1.h  main.cpp
S5/OpenGL/GL1/: main.cpp
S5/OpenGL/GL2/: CMakeLists.txt  app.cpp  app.h  camera.cpp  camera.h  ebo.cpp  main.cpp  shader_class.cpp  shader_class.h  vao.cpp  vao.h  vbo.cpp  vbo.h
S5/OpenGL/GL2/shaders/fragments/: passthrough.frag
S5/OpenGL/GL2/shaders/vertex/: passthrough.vert
S5/OpenGL/GL3/: CMakeLists.txt  app.cpp  app.h  camera.cpp  camera.h  ebo.h  main.cpp  shader_class.cpp  shader_class.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
S5/OpenGL/GL3/shaders/fragments/: model.frag  model2.frag  model_phong.frag
S5/OpenGL/GL3/shaders/vertex/: default.vert  model.vert  model_gouraud.vert  model_phong.vert
(+1713 files in other folders)
